milldb.output
Terminals unused in grammar

   INSERT_KEYWORD
   WRITEPROC_KEYWORD
   READPROC_KEYWORD
   PK_KEYWORD
   BEGIN_KEYWORD
   END_KEYWORD
   VALUE
   BAD_CHARACTER


Grammar

    0 $accept: program $end

    1 program: program_element_list

    2 program_element_list: program_element
    3                     | program_element_list program_element

    4 program_element: table_declaration
    5                | index_declaration

    6 table_declaration: CREATE_KEYWORD TABLE_KEYWORD table_name table_contents_source SEMICOLON

    7 index_declaration: CREATE_KEYWORD INDEX_KEYWORD index_name ON_KEYWORD table_name LPAREN simple_parameter_list RPAREN SEMICOLON

    8 simple_parameter_list: column_name
    9                      | simple_parameter_list COMMA column_name

   10 table_contents_source: LPAREN table_element_list RPAREN

   11 table_element_list: table_element
   12                   | table_element_list COMMA table_element

   13 table_element: column_definition

   14 column_definition: column_name data_type

   15 table_name: IDENTIFIER

   16 index_name: IDENTIFIER

   17 column_name: IDENTIFIER

   18 data_type: INT_KEYWORD
   19          | FLOAT_KEYWORD
   20          | DOUBLE_KEYWORD
   21          | STR_KEYWORD


Terminals, with rules where they appear

$end (0) 0
error (256)
CREATE_KEYWORD (258) 6 7
INSERT_KEYWORD (259)
WRITEPROC_KEYWORD (260)
READPROC_KEYWORD (261)
TABLE_KEYWORD (262) 6
PK_KEYWORD (263)
BEGIN_KEYWORD (264)
END_KEYWORD (265)
INDEX_KEYWORD (266) 7
ON_KEYWORD (267) 7
INT_KEYWORD (268) 18
FLOAT_KEYWORD (269) 19
DOUBLE_KEYWORD (270) 20
STR_KEYWORD (271) 21
RPAREN (272) 7 10
LPAREN (273) 7 10
SEMICOLON (274) 6 7
COMMA (275) 9 12
IDENTIFIER (276) 15 16 17
VALUE (277)
BAD_CHARACTER (278)


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
program (25)
    on left: 1, on right: 0
program_element_list (26)
    on left: 2 3, on right: 1 3
program_element (27)
    on left: 4 5, on right: 2 3
table_declaration (28)
    on left: 6, on right: 4
index_declaration (29)
    on left: 7, on right: 5
simple_parameter_list (30)
    on left: 8 9, on right: 7 9
table_contents_source (31)
    on left: 10, on right: 6
table_element_list (32)
    on left: 11 12, on right: 10 12
table_element (33)
    on left: 13, on right: 11 12
column_definition (34)
    on left: 14, on right: 13
table_name (35)
    on left: 15, on right: 6 7
index_name (36)
    on left: 16, on right: 7
column_name (37)
    on left: 17, on right: 8 9 14
data_type (38)
    on left: 18 19 20 21, on right: 14


State 0

    0 $accept: . program $end

    CREATE_KEYWORD  shift, and go to state 1

    program               go to state 2
    program_element_list  go to state 3
    program_element       go to state 4
    table_declaration     go to state 5
    index_declaration     go to state 6


State 1

    6 table_declaration: CREATE_KEYWORD . TABLE_KEYWORD table_name table_contents_source SEMICOLON
    7 index_declaration: CREATE_KEYWORD . INDEX_KEYWORD index_name ON_KEYWORD table_name LPAREN simple_parameter_list RPAREN SEMICOLON

    TABLE_KEYWORD  shift, and go to state 7
    INDEX_KEYWORD  shift, and go to state 8


State 2

    0 $accept: program . $end

    $end  shift, and go to state 9


State 3

    1 program: program_element_list .
    3 program_element_list: program_element_list . program_element

    CREATE_KEYWORD  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program_element    go to state 10
    table_declaration  go to state 5
    index_declaration  go to state 6


State 4

    2 program_element_list: program_element .

    $default  reduce using rule 2 (program_element_list)


State 5

    4 program_element: table_declaration .

    $default  reduce using rule 4 (program_element)


State 6

    5 program_element: index_declaration .

    $default  reduce using rule 5 (program_element)


State 7

    6 table_declaration: CREATE_KEYWORD TABLE_KEYWORD . table_name table_contents_source SEMICOLON

    IDENTIFIER  shift, and go to state 11

    table_name  go to state 12


State 8

    7 index_declaration: CREATE_KEYWORD INDEX_KEYWORD . index_name ON_KEYWORD table_name LPAREN simple_parameter_list RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 13

    index_name  go to state 14


State 9

    0 $accept: program $end .

    $default  accept


State 10

    3 program_element_list: program_element_list program_element .

    $default  reduce using rule 3 (program_element_list)


State 11

   15 table_name: IDENTIFIER .

    $default  reduce using rule 15 (table_name)


State 12

    6 table_declaration: CREATE_KEYWORD TABLE_KEYWORD table_name . table_contents_source SEMICOLON

    LPAREN  shift, and go to state 15

    table_contents_source  go to state 16


State 13

   16 index_name: IDENTIFIER .

    $default  reduce using rule 16 (index_name)


State 14

    7 index_declaration: CREATE_KEYWORD INDEX_KEYWORD index_name . ON_KEYWORD table_name LPAREN simple_parameter_list RPAREN SEMICOLON

    ON_KEYWORD  shift, and go to state 17


State 15

   10 table_contents_source: LPAREN . table_element_list RPAREN

    IDENTIFIER  shift, and go to state 18

    table_element_list  go to state 19
    table_element       go to state 20
    column_definition   go to state 21
    column_name         go to state 22


State 16

    6 table_declaration: CREATE_KEYWORD TABLE_KEYWORD table_name table_contents_source . SEMICOLON

    SEMICOLON  shift, and go to state 23


State 17

    7 index_declaration: CREATE_KEYWORD INDEX_KEYWORD index_name ON_KEYWORD . table_name LPAREN simple_parameter_list RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 11

    table_name  go to state 24


State 18

   17 column_name: IDENTIFIER .

    $default  reduce using rule 17 (column_name)


State 19

   10 table_contents_source: LPAREN table_element_list . RPAREN
   12 table_element_list: table_element_list . COMMA table_element

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   11 table_element_list: table_element .

    $default  reduce using rule 11 (table_element_list)


State 21

   13 table_element: column_definition .

    $default  reduce using rule 13 (table_element)


State 22

   14 column_definition: column_name . data_type

    INT_KEYWORD     shift, and go to state 27
    FLOAT_KEYWORD   shift, and go to state 28
    DOUBLE_KEYWORD  shift, and go to state 29
    STR_KEYWORD     shift, and go to state 30

    data_type  go to state 31


State 23

    6 table_declaration: CREATE_KEYWORD TABLE_KEYWORD table_name table_contents_source SEMICOLON .

    $default  reduce using rule 6 (table_declaration)


State 24

    7 index_declaration: CREATE_KEYWORD INDEX_KEYWORD index_name ON_KEYWORD table_name . LPAREN simple_parameter_list RPAREN SEMICOLON

    LPAREN  shift, and go to state 32


State 25

   10 table_contents_source: LPAREN table_element_list RPAREN .

    $default  reduce using rule 10 (table_contents_source)


State 26

   12 table_element_list: table_element_list COMMA . table_element

    IDENTIFIER  shift, and go to state 18

    table_element      go to state 33
    column_definition  go to state 21
    column_name        go to state 22


State 27

   18 data_type: INT_KEYWORD .

    $default  reduce using rule 18 (data_type)


State 28

   19 data_type: FLOAT_KEYWORD .

    $default  reduce using rule 19 (data_type)


State 29

   20 data_type: DOUBLE_KEYWORD .

    $default  reduce using rule 20 (data_type)


State 30

   21 data_type: STR_KEYWORD .

    $default  reduce using rule 21 (data_type)


State 31

   14 column_definition: column_name data_type .

    $default  reduce using rule 14 (column_definition)


State 32

    7 index_declaration: CREATE_KEYWORD INDEX_KEYWORD index_name ON_KEYWORD table_name LPAREN . simple_parameter_list RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 18

    simple_parameter_list  go to state 34
    column_name            go to state 35


State 33

   12 table_element_list: table_element_list COMMA table_element .

    $default  reduce using rule 12 (table_element_list)


State 34

    7 index_declaration: CREATE_KEYWORD INDEX_KEYWORD index_name ON_KEYWORD table_name LPAREN simple_parameter_list . RPAREN SEMICOLON
    9 simple_parameter_list: simple_parameter_list . COMMA column_name

    RPAREN  shift, and go to state 36
    COMMA   shift, and go to state 37


State 35

    8 simple_parameter_list: column_name .

    $default  reduce using rule 8 (simple_parameter_list)


State 36

    7 index_declaration: CREATE_KEYWORD INDEX_KEYWORD index_name ON_KEYWORD table_name LPAREN simple_parameter_list RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 38


State 37

    9 simple_parameter_list: simple_parameter_list COMMA . column_name

    IDENTIFIER  shift, and go to state 18

    column_name  go to state 39


State 38

    7 index_declaration: CREATE_KEYWORD INDEX_KEYWORD index_name ON_KEYWORD table_name LPAREN simple_parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (index_declaration)


State 39

    9 simple_parameter_list: simple_parameter_list COMMA column_name .

    $default  reduce using rule 9 (simple_parameter_list)
